Updated and Remove the change URL button and text issue#1

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -14,7 +14,7 @@
   },
   "CONFIGURE_URL": {
     "ENTER_URL": "رابط التثبيت",
-    "DESCRIPTION": "إذا كنت تستخدم تثبيت Chatwoot، قم بإدخال رابط الخادم الخاص بك. خلاف ذلك، استخدم app.chatwoot.com.",
+    "DESCRIPTION": "إذا كنت تستخدم تثبيت Chatwoot، قم بإدخال رابط الخادم الخاص بك. خلاف ذلك، استخدم chat.onehash.ai.",
     "URL_ERROR": "الرجاء إدخال عنوان صحيح",
     "URL_REQUIRED": "الرابط مطلوب",
     "CONNECT": "اتصل",
