--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -14,7 +14,7 @@
   },
   "CONFIGURE_URL": {
     "ENTER_URL": "Asennuksen URL",
-    "DESCRIPTION": "Jos käytät itse ylläpidettyä Chatwoot asennusta, syötä palvelimen URL-osoite. Muussa tapauksessa käytä osoitetta app.chatwoot.com.",
+    "DESCRIPTION": "Jos käytät itse ylläpidettyä Chatwoot asennusta, syötä palvelimen URL-osoite. Muussa tapauksessa käytä osoitetta chat.onehash.ai.",
     "URL_ERROR": "Anna kelvollinen URL-osoite",
     "URL_REQUIRED": "URL osoite vaaditaan",
     "CONNECT": "Yhdistä",
