--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -14,7 +14,7 @@
   },
   "CONFIGURE_URL": {
     "ENTER_URL": "Installatie-url",
-    "DESCRIPTION": "Als je een zelf gehoste Chatwoot-installatie gebruikt, voer dan de URL van jouw server in. Gebruik anders: app.chatwoot.com.",
+    "DESCRIPTION": "Als je een zelf gehoste Chatwoot-installatie gebruikt, voer dan de URL van jouw server in. Gebruik anders: chat.onehash.ai.",
     "URL_ERROR": "Voer een geldige URL in",
     "URL_REQUIRED": "URL is vereist",
     "CONNECT": "Koppel",
